--- a/src/components/TrendsPosts/index.css
+++ b/src/components/TrendsPosts/index.css
@@ -7,11 +7,11 @@
 }
 
 .TrendPostPhoto {
-  background-color: lightgrey;
+  background-color: #57a2d1;
   border-radius: 100%;
   width: 50px;
   height: 50px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .TrendPostContent {
