--- a/src/components/PostsList/index.css
+++ b/src/components/PostsList/index.css
@@ -1,8 +1,6 @@
 .PostsList {
   width: 100%;
-  height: 70%;
-  overflow-y: scroll;
-  position: fixed;
+  position: absolute;
   top: 20%;
   bottom: 10%;
   left: 0;
