--- a/src/components/SideMenu/index.css
+++ b/src/components/SideMenu/index.css
@@ -15,6 +15,9 @@
     font-size: 14px;
     padding: 5px;
     background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
   }
 
   .SideMenu ul {
