--- a/src/components/Trends/index.css
+++ b/src/components/Trends/index.css
@@ -7,17 +7,24 @@
   .Trends {
     display: block;
     background-color: white;
-    height: 100%;
     border-left: 1px solid lightgrey;
     width: 35%;
-    position: fixed;
+    position: absolute;
     right: 0;
     top: 0;
-    overflow-y: scroll;
     padding: 10px 5px;
   }
 
   .Trends::-webkit-scrollbar {
     display: none;
+  }
+
+  .Trends h3 {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 35px;
+    padding: 10px;
+    background-color: white;
   }
 }
