--- a/src/components/Trends/index.css
+++ b/src/components/Trends/index.css
@@ -1,6 +1,7 @@
 .Trends {
   display: none;
   font-family: Arial;
+  border-left: 1px solid lightgrey;
 }
 
 @media screen and (min-width: 600px) {
@@ -18,16 +19,5 @@
 
   .Trends::-webkit-scrollbar {
     display: none;
-  }
-
-  .scrolled {
-    border-radius: 40px;
-    top: 20%;
-    width: 30%;
-    height: 60%;
-    left: 68%;
-    right: 30%;
-    border: 1px solid lightgrey;
-    padding: 10px;
   }
 }
