--- a/src/components/TrendsPosts/index.css
+++ b/src/components/TrendsPosts/index.css
@@ -42,6 +42,12 @@
   height: 20px;
   cursor: pointer;
 }
+
 .TrendPostContent p {
   padding: 7px 0px;
+}
+
+.like span {
+  color: rgb(159, 159, 159);
+  font-size: 12px;
 }
