--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -6,8 +6,8 @@
   justify-content: center;
   position: fixed;
   background-color: white;
-  bottom: 0px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
   z-index: 3;
 }
 
